[gd_scene load_steps=8 format=3 uid="uid://drone_animated"]

[ext_resource type="Script" path="res://scripts/Drone.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/characters/drone/drone_base.png" id="2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_drone"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"flying",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"scanning",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_drone"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 80.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_thruster"]
direction = Vector3(0, 1, 0)
spread = 15.0
initial_velocity_min = 15.0
initial_velocity_max = 30.0
gravity = Vector3(0, -30, 0)
scale_min = 0.1
scale_max = 0.3

[sub_resource type="Curve" id="Curve_sine"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.25, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0.5), 0.0, 0.0, 0, 0, Vector2(0.75, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]

[node name="Drone" type="CharacterBody2D"]
script = ExtResource("1")
collision_layer = 4
collision_mask = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_drone")
animation = &"hover"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_drone")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="ThrusterParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 6)
emitting = true
amount = 15
process_material = SubResource("ParticleProcessMaterial_thruster")
lifetime = 1.0

[node name="ScanBeam" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 60)
width = 1.5
default_color = Color(0, 1, 1, 0.6)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ScanTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true



[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
pitch_scale = 1.2

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ScanTimer" to="." method="_on_scan_timer_timeout"] 